; ModuleID = '/home/carl/AnghaBench/linux/net/ieee802154/extr_nl802154.c_wpan_dev_id.c'
source_filename = "/home/carl/AnghaBench/linux/net/ieee802154/extr_nl802154.c_wpan_dev_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpan_dev = type { i32, i64 }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wpan_dev*)* @wpan_dev_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wpan_dev_id(%struct.wpan_dev* %0) #0 {
  %2 = alloca %struct.wpan_dev*, align 8
  store %struct.wpan_dev* %0, %struct.wpan_dev** %2, align 8
  %3 = load %struct.wpan_dev*, %struct.wpan_dev** %2, align 8
  %4 = getelementptr inbounds %struct.wpan_dev, %struct.wpan_dev* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = trunc i64 %5 to i32
  %7 = load %struct.wpan_dev*, %struct.wpan_dev** %2, align 8
  %8 = getelementptr inbounds %struct.wpan_dev, %struct.wpan_dev* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = call %struct.TYPE_2__* @wpan_phy_to_rdev(i32 %9)
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = trunc i64 %12 to i32
  %14 = shl i32 %13, 32
  %15 = or i32 %6, %14
  ret i32 %15
}

declare dso_local %struct.TYPE_2__* @wpan_phy_to_rdev(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
